# llama.cpp

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Package.generated.last  Package.swift  README.md  build-xcframework-ios-optimized-v3.sh  build-xcframework-ios-optimized-v5.sh  build-xcframework-ios.sh  build_llama.sh  convert_hf_to_gguf.py  convert_lora_to_gguf.py  package_clean.sh  test.sh  ty.toml  whatsnew.md
.devops/: intel.Dockerfile
.github/: labeler.yml
.github/workflows/: build-and-test-snapdragon.yml  build-self-hosted.yml  release.yml  server-self-hosted.yml  server-webui.yml  server.yml  webui-build.yml  webui-publish.yml
.pi/gg/: SYSTEM.md
common/: arg.cpp  build-info.cpp  chat-auto-parser-generator.cpp  chat-diff-analyzer.cpp  chat-peg-parser.cpp  chat.cpp  common.cpp  common.h  download.cpp  sampling.cpp  speculative.cpp  speculative.h
common/jinja/: caps.cpp
conversion/: __init__.py  base.py  hunyuan.py  llama.py  qwen.py  qwen3vl.py
docs/: ops.md  speculative.md
docs/backend/: SYCL.md
docs/ops/: SYCL.csv
examples/llama-eval/: llama-eval.py
examples/llama.swiftui/llama.swiftui.xcodeproj/: project.pbxproj
examples/llama.swiftui/llama.swiftui/UI/: ContentView.swift  LoadCustomButton.swift
examples/llava/: clip.h  llava-cli.cpp
examples/main/: main.cpp
examples/simple-chat/: simple-chat.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml.h
ggml/src/: ggml-backend-meta.cpp  ggml-common.h  ggml-metal.m  ggml-quants.c  ggml-quants.h  ggml.c  gguf.cpp
ggml/src/ggml-cpu/: arch-fallback.h  ggml-cpu.c  ops.cpp  quants.c  quants.h
ggml/src/ggml-cpu/arch/arm/: quants.c
ggml/src/ggml-cuda/: common.cuh  concat.cu  getrows.cu  ggml-cuda.cu  mmq.cu  mmq.cuh  mmvq.cu  quantize.cu  quantize.cuh
ggml/src/ggml-hexagon/: ggml-hexagon.cpp
ggml/src/ggml-hexagon/htp/: act-ops.c  main.c  unary-ops.c  unary-ops.h
ggml/src/ggml-hip/: CMakeLists.txt
ggml/src/ggml-metal/: ggml-metal-device.cpp  ggml-metal-device.h  ggml-metal-device.m  ggml-metal-impl.h  ggml-metal-ops.cpp  ggml-metal-ops.h  ggml-metal.m  ggml-metal.metal
ggml/src/ggml-opencl/: ggml-opencl.cpp
ggml/src/ggml-sycl/: backend.hpp  common.hpp  dmmv.cpp  element_wise.cpp  ggml-sycl.cpp  presets.hpp
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: vulkan-shaders-gen.cpp
gguf-py/gguf/: constants.py
include/: llama.h
models/templates/: deepseek-ai-DeepSeek-V4.jinja
scripts/: sync-ggml.last  sync_vendor.py  webui-download.cmake
spm-headers/: clip.h  llama_umbrella.h  llava.h  module.modulemap  sampling.h
src/: CMakeLists.txt  llama-arch.cpp  llama-batch.cpp  llama-context.cpp  llama-graph.cpp  llama-graph.h  llama-impl.h  llama-kv-cache-dsv4.cpp  llama-kv-cache-dsv4.h  llama-kv-cache.cpp  llama-model-loader.cpp  llama-model.cpp  llama-quant.cpp  llama.cpp
src/models/: deepseek2.cpp  deepseek4.cpp  delta-net-base.cpp  llama.cpp
tests/: CMakeLists.txt  test-backend-ops.cpp  test-chat-auto-parser.cpp  test-chat.cpp  test-gguf.cpp  test-llama-archs.cpp
tools/: CMakeLists.txt
tools/cli/: README.md  cli-context.cpp  cli-context.h  cli.cpp
tools/completion/: README.md
tools/mtmd/: clip-impl.h  clip.cpp  mtmd-helper.cpp  mtmd.cpp
tools/server/: CMakeLists.txt  README-dev.md  README.md  server-common.cpp  server-context.cpp  server-http.cpp  server-models.cpp  server-schema.cpp  server-stream.cpp  server-stream.h  server-task.cpp  server-task.h  server-tools.cpp  server-tools.h  server.cpp
tools/server/tests/: utils.py
tools/server/tests/unit/: test_router.py  test_tools_builtin.py
tools/server/webui/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
tools/server/webui/scripts/: dev.sh  install-git-hooks.sh
tools/server/webui/src/lib/components/app/chat/ChatScreen/: ChatScreen.svelte
tools/server/webui/src/lib/hooks/: use-auto-scroll.svelte.ts
tools/server/webui/src/lib/services/: chat.service.ts
tools/server/webui/src/lib/stores/: agentic.svelte.ts  chat.svelte.ts
tools/server/webui/tests/stories/: Introduction.mdx
tools/ui/: .gitignore  .prettierignore  eslint.config.js  tsconfig.json  vite.config.ts
tools/ui/scripts/: vite-plugin-nerdamer.ts
tools/ui/src/: virtual-nerdamer.d.ts
tools/ui/src/lib/components/app/chat/ChatForm/ChatFormActions/ChatFormActionAdd/: ChatFormActionAddDropdown.svelte  ChatFormActionAddMcpServersSubmenu.svelte  ChatFormActionAddSheet.svelte  (+1 more)
tools/ui/src/lib/components/app/chat/ChatMessages/: ChatMessageAgenticContent.svelte  ChatMessages.svelte
tools/ui/src/lib/components/app/dialogs/: DialogMcpServerAddNew.svelte  DialogMcpServerRecommendations.svelte  index.ts
tools/ui/src/lib/components/app/mcp/: index.ts
tools/ui/src/lib/components/app/mcp/McpServerCard/: McpServerCard.svelte  McpServerCardCompact.svelte
tools/ui/src/lib/components/app/navigation/SidebarNavigation/: SidebarNavigationActions.svelte  SidebarNavigationConversationItem.svelte
tools/ui/src/lib/components/app/settings/: SettingsMcpServers.svelte
tools/ui/src/lib/components/app/settings/SettingsChat/: SettingsChatFields.svelte  SettingsChatToolsTab.svelte
tools/ui/src/lib/constants/: index.ts  mcp-form.ts  model-id.ts  reasoning-effort.ts  recommended-mcp-servers.ts  sandbox.ts  settings-keys.ts  settings-registry.ts  storage.ts
tools/ui/src/lib/enums/: reasoning-effort.enums.ts
tools/ui/src/lib/hooks/: use-mcp-recommendations.svelte.ts  use-reasoning-menu.svelte.ts
tools/ui/src/lib/services/: chat.service.ts  index.ts  mcp.service.ts  migration.service.ts  sandbox-harness.ts  sandbox-worker.js  sandbox.service.ts
tools/ui/src/lib/stores/: agentic.svelte.ts  chat.svelte.ts  conversations.svelte.ts  mcp.svelte.ts  models.svelte.ts  tools.svelte.ts
tools/ui/src/lib/types/: mcp.d.ts  reasoning.ts  settings.d.ts
tools/ui/src/lib/utils/: branching.ts
tools/ui/src/routes/: +layout.svelte
tools/ui/tests/client/: sandbox.service.svelte.test.ts
tools/ui/tests/unit/: parse-mcp-server-settings.test.ts  recommended-mcp-servers.test.ts
(+1 files in other folders)
